...

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_blank_inbox_saved"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints">
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/navigation_items">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <ImageView
        android:id="@+id/inbox_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:foreground="@drawable/ripple_red_25_corners"
        android:onClick="inboxPage"
...
